<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".PortfolioActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/my_title"
        android:id="@+id/myTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />

    <Button
        android:text="@string/media_streamer"
        android:id="@+id/spotifyStreamerButton"
        android:layout_below="@+id/myTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@android:color/holo_green_dark"
        android:textColor="@android:color/white"
        android:textAllCaps="true"
        android:padding="10dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="displayMessage" />

    <Button
        android:text="@string/super_duo1"
        android:id="@+id/scoresAppButton"
        android:layout_below="@+id/spotifyStreamerButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@android:color/holo_green_dark"
        android:textColor="@android:color/white"
        android:textAllCaps="true"
        android:padding="10dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="displayMessage" />

    <Button
        android:text="@string/super_duo2"
        android:id="@+id/libraryAppButton"
        android:layout_below="@+id/scoresAppButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@android:color/holo_green_dark"
        android:textColor="@android:color/white"
        android:textAllCaps="true"
        android:padding="10dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="displayMessage" />

    <Button
        android:text="@string/build_it_bigger"
        android:id="@+id/buildBiggerButton"
        android:layout_below="@+id/libraryAppButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@android:color/holo_green_dark"
        android:textColor="@android:color/white"
        android:textAllCaps="true"
        android:padding="10dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="displayMessage" />

    <Button
        android:text="@string/xyz_reader"
        android:id="@+id/xyzReaderButton"
        android:layout_below="@+id/buildBiggerButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@android:color/holo_green_dark"
        android:textColor="@android:color/white"
        android:textAllCaps="true"
        android:padding="10dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="displayMessage" />

    <Button
        android:text="@string/capstone"
        android:id="@+id/capstoneButton"
        android:layout_below="@+id/xyzReaderButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@android:color/holo_red_light"
        android:textColor="@android:color/white"
        android:textAllCaps="true"
        android:padding="10dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="displayMessage" />

</RelativeLayout>
